public/styles/module.css
h2{
  font-family: 'Graduate', cursive;
}

.logo   {
  color: #fff;
  height: 50px;
  line-height: 50px;
  font-size: 24px;
  font-weight: bold;
  float: left;
  margin-left: 1%;
}

header nav ul {
  margin: 0;
  padding: 0;
}

header nav ul li {
  list-style: none;
}

header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px;
  height: 50px;
  line-height: 50px;
  display: block;
}

.inputs-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

i.watermellon {
  color: rgb(201, 54, 58);
}

.site-content {
  flex: 1;
}

#lab_social_icon_footer a {
  color: #f1f1f1;
  font-size: 15px;
}

.text-center {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 10px;
}

.show {
  visibility: hidden;
  opacity: 0;
}

#patient-list {
  text-align: center;
  width: 90%;
  margin: 0 auto;
  margin-bottom: 50px;
  list-style-type: none;
  padding: 0;
  height: 400px;
  background-color: #f6f6f6; 
  overflow-y: scroll;
}

#patient-list li a {
  border: 1px solid #7d7d6e; /* Add a border to all links */
  margin-top: -1px; /* Prevent double borders */
  background-color: #f6f6f6; /* Grey background color */
  text-decoration: none; /* Remove default text underline */
  font-size: 18px; /* Increase the font-size */
  color: black; /* Add a black text color */
  display: block; /* Make it into a block element to fill the whole list */
}

#patient-list li a:hover {
  background-color: #b3aca7;
}

.red {
  color: #E80000; 
}

.detail-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.input {
  background-color: white;
  font-family: Lato, sans-serif;
  font-size: 0.875em;
  width: 200px;
  height: 50px;
  color: rgb(114, 102, 89);
  padding: 0px 15px;
  outline: none;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(179, 172, 167);
  border-image: initial;
  transition: all 0.3s ease-in-out 0s;
}

.floated-title {
  display: flex;
  justify-content: center;
  margin-bottom: 10px;
}
.submit {
  width: 200px;
  height: 50px;
  background-color: #c9363a;
  padding: 0;
  margin: 7px 0px 0px 0px;
  font-family: 'Lato', sans-serif;
  font-size: 0.875em;
  color: #b3aca7;
  outline:none;
  cursor: pointer;
  border: solid 1px #b3aca7;
}

.submit:hover {
  color: #e2dedb;
}
 
.inputs-form {
  width: 30%;
} 

.page-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.search-width {
  width: 90% !important;
}

.search-patient-label {
  display: flex;
  width: 100%;
  justify-content: space-around;
}

ul li a:hover {
  background-color: #c9363a;
}

#myInput {
  height: 30px;
  border: 1px solid #b3aca7;
  width: 92.5%; /* Full-width */
  font-size: 16px; /* Increase font-size */
  padding: 12px 20px 12px 40px; /* Add some padding */
  border: 1px solid #ddd; /* Add a grey border */
  margin-bottom: 0px; /* Add some space below the input */
}

.keyword {
  list-style-type: none;
  background-color: #eeeeee;
  border-radius: 25px;
  display: inline-block;
  padding: 6px;
  margin: 5px;
  border: 1px solid gray;
}

.keyword:nth-child(-n+5) {
  background-color: rgb(24, 197, 24);
  border: 1px solid rgb(115, 233, 115);
  transform: scale(1.1);
  color: #eeeeee;
  width: max-content;
  margin: 8px;
}

.keyword-header {
  margin-left: 3%;
}

.back {
  height: 20px;
  width: 100px;
  padding: 10px;
  text-align: center;
  text-decoration: none;
  margin-left: 3%;
  margin-bottom: 20px;
}

.submit-center {
  margin: 0 auto;
}

.active {
  background-color: #1c1c1c;
}

.kp-main {
  height: 100vh;
  overflow-y: scroll;
}

.rd-main {
  width: 95%;
  margin: 0 auto;
  height: 100vh;
  overflow-y: scroll;
}

.active-red {
  background-color: #c9363a;
}

.team-image {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  background-size: cover;
  background-repeat: no-repeat;
  margin: 0 auto;
}

.image-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin: 50px 0;
  flex-wrap: wrap;
  background-color: #cbcbcb;
  box-sizing: border-box;
  padding: 25px 10px 0px 10px;
  border: 1px solid gray;
}

.team-card {
  text-align: center;
  margin: 0 auto 20px auto;
  height: 300px;
}

.team-card i {
  font-size: 2em;
}

.team-card a {
  color: black;
}

.team-card a:visited {
  text-decoration: none;
  color: black;
}

.tre {
  background-image: url('../assets/tre.jpeg');
}

.jeff {
  background-image: url('../assets/jeff.jpg');
}

.ken {
  background-image: url('../assets/kendra.jpg');
}

.aaron {
  background-image: url('../assets/aaron.jpg');
}

.noPad {
  padding: 0px;
}

